fix: improve coin management for eliminate/uneliminate players and auction control in admin portal; resolve database error in player portal

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,13 @@
                     <span id="player-coins">1000</span>
                 </div>
             </div>
+
+            <div class="won-items-section">
+                <h2>Items Won</h2>
+                <ul id="won-items-list">
+                    <li>(No items won yet)</li>
+                </ul>
+            </div>
             
             <h2>Auction Area</h2>
             <div id="auction-zone">
