--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,6 @@
 
         <div id="game-view" class="hidden">
             <button id="logout-btn">Logout</button>
-
             <div id="welcome-card">
                 <h2 id="welcome-player-id">Player DS152</h2>
                 <p>You are invited to</p>
@@ -43,7 +42,7 @@
                     <span id="player-number">000</span>
                 </div>
                 <div class="info-box">
-                    <h2>Your Coins</h2>
+                    <h2>Your SquidBits</h2>
                     <span id="player-coins">1000</span>
                 </div>
             </div>
@@ -65,6 +64,10 @@
     <div id="eliminated-overlay" class="hidden">
         <h1>ELIMINATED</h1>
     </div>
+
+    <footer>
+        <p>&copy; 2025 Aarush Chaudhary, STME NMIMS Hyderabad, All Rights Reserved</p>
+    </footer>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="app.js"></script>
