--- a/public/index.html
+++ b/public/index.html
@@ -11,58 +11,22 @@
 </head>
 <body>
     <div class="container">
-        <div id="login-view">
-            <h1>PLAYER LOGIN</h1>
-            <form id="login-form">
-                <div class="form-group">
-                    <label for="sapId">SAP ID</label>
-                    <input type="text" id="sapId" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" required>
-                </div>
-                <button type="submit">Enter the Game</button>
-                <p id="login-error" class="error-message hidden"></p>
-            </form>
-        </div>
-
-        <div id="game-view" class="hidden">
-            <button id="logout-btn">Logout</button>
-            <div id="welcome-card">
-                <h2 id="welcome-player-id">Player DS152</h2>
-                <p>You are invited to</p>
-                <p class="event-name">Prarambh</p>
-                <p>16<sup>th</sup> August, 5:30 pm</p>
-            </div>
-            
-            <div class="player-info">
-                <div class="info-box">
-                    <h2>Your Number</h2>
-                    <span id="player-number">000</span>
-                </div>
-                <div class="info-box">
-                    <h2>Your SquidBits</h2>
-                    <span id="player-coins">1000</span>
-                </div>
-            </div>
-
-            <div class="won-items-section">
-                <h2>Items Won</h2>
-                <ul id="won-items-list">
-                    <li>(No items won yet)</li>
-                </ul>
-            </div>
-            
-            <h2>Auction Area</h2>
-            <div id="auction-zone">
-                <p>Waiting for the host to start an auction...</p>
-            </div>
-        </div>
+        <div id="login-view"><h1>PLAYER LOGIN</h1><form id="login-form"><div class="form-group"><label for="sapId">SAP ID</label><input type="text" id="sapId" required></div><div class="form-group"><label for="password">Password</label><input type="password" id="password" required></div><button type="submit">Enter the Game</button><p id="login-error" class="error-message hidden"></p></form></div>
+        <div id="game-view" class="hidden"><button id="logout-btn">Logout</button><div id="welcome-card"><h2 id="welcome-player-id">Player DS152</h2><p>You are invited to</p><p class="event-name">Prarambh</p><p>16<sup>th</sup> August, 5:30 pm</p></div><div class="player-info"><div class="info-box"><h2>Your Number</h2><span id="player-number">000</span></div><div class="info-box"><h2>Your SquidBits</h2><span id="player-coins">1000</span></div></div><div class="won-items-section"><h2>Items Won</h2><ul id="won-items-list"><li>(No items won yet)</li></ul></div><h2>Auction Area</h2><div id="auction-zone"><p>Waiting for the host to start an auction...</p></div></div>
     </div>
+    <div id="eliminated-overlay" class="hidden"><h1>ELIMINATED</h1></div>
 
-    <div id="eliminated-overlay" class="hidden">
-        <h1>ELIMINATED</h1>
+    <div id="shape-quest-overlay" class="hidden">
+        <div class="shape-quest-content">
+            <h1>Choose Your Shape!</h1>
+            <div id="shape-quest-timer">15</div>
+            <div class="shape-options">
+                <button class="shape-btn" data-shape="circle">○</button>
+                <button class="shape-btn" data-shape="triangle">△</button>
+                <button class="shape-btn" data-shape="square">□</button>
+            </div>
+            <p>You must choose before the timer runs out!</p>
+        </div>
     </div>
 
     <footer>
