feat: added admin authentication and favicon

--- a/public/admin.html
+++ b/public/admin.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
+    <script src="admin-auth.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="/media/favicon-admin.png">
 </head>
 <body>
     <div class="container" id="admin-dashboard">
