--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
         <p>&copy; 2025 Aarush Chaudhary, STME NMIMS Hyderabad, All Rights Reserved</p>
     </footer>
 
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
